<resources>
    <string name="app_name">News App</string>

    <!--    Bottom Menu-->
    <string name="home">HOME</string>
    <string name="search">SEARCH</string>
    <string name="sources">SOURCES</string>

    <!--    Sample Text-->
    <string name="sample_source">BBC News • 1h</string>
    <string name="sample_title">Why would Putin want to nuke Florida?</string>
    <string name="sample_title_long">PM Narendra Modi\'s frivolous statements won\'t help create wedge between me and Congress: Amarinder Singh</string>
    <string name="sample_description">The Sunshine State is home to Mr Trump\'s golf resort, but bigger targets lie elsewhere in the US.</string>
    <string name="image_desc">Image for the News Post</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_read_full_story">Read Full Story</string>
    <string name="image_desc_share_button">share button</string>
    <string name="SearchNews">Search News</string>
    <string name="no_news">NO NEWS</string>

</resources>