<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/news_detail_view"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/iv_news_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/image_desc"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            app:layout_constraintDimensionRatio="h,16:9"
            app:layout_constraintStart_toStartOf="parent"
            tools:background="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/recyclerViewDivider"
            app:layout_constraintBottom_toBottomOf="@id/tv_news_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_news_image" />


        <ImageButton
            android:id="@+id/iv_share"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:tint="@color/colorTextPrimary"
            android:pointerIcon="cell"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/image_desc_share_button"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            app:srcCompat="@drawable/ic_share" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_news_title"
            tools:text="@tools:sample/date/ddmmyy" />

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingMultiplier="1.1"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/iv_news_image"
            tools:text="@string/sample_title" />

        <TextView
            android:id="@+id/tv_news_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorTextPrimary"
            android:paddingBottom="18dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_time"
            tools:text="The Washington Post" />

        <TextView
            android:id="@+id/tv_news_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorTextPrimary"
            android:paddingBottom="18dp"
            android:textSize="12sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_news_source"
            tools:text="The Washington Post" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            android:padding="8dp"
            android:background="@color/colorWhite"
            android:backgroundTint="@color/colorWhite"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/tv_news_author"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_news_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:alpha="0.6"
                android:lineSpacingMultiplier="1.3"
                android:textColor="@color/colorTextSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_news_content"
                android:textSize="18sp"
                tools:layout_editor_absoluteY="365dp"
                tools:text="@string/sample_description" />

            <TextView
                android:id="@+id/tv_news_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:alpha="0.6"
                android:lineSpacingMultiplier="1.3"
                android:textColor="@color/colorTextSecondary"
                android:background="@color/colorWhite"
                android:backgroundTint="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_news_desc"
                tools:text="@string/sample_description" />

            <Button
                android:id="@+id/btn_read_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_selector"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/button_read_full_story"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_news_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?actionBarItemBackground"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_close" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="12dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="12dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>